--- a/.github/workflows/ibis-backends.yml
+++ b/.github/workflows/ibis-backends.yml
@@ -229,6 +229,12 @@ jobs:
               - setuptools
             services:
               - flink
+          - name: timeplus
+            title: Timeplus
+            services:
+              - timeplus
+            extras:
+              - timeplus
         include:
           - os: ubuntu-latest
             python-version: "3.11"
@@ -418,6 +424,14 @@ jobs:
                 - --extra exasol
               services:
                 - exasol
+          - os: windows-latest
+            backend:
+              name: timeplus
+              title: Timeplus
+              extras:
+                - timeplus
+              services:
+                - timeplus
     steps:
       - name: update and install system dependencies
         if: matrix.os == 'ubuntu-latest' && matrix.backend.sys-deps != null
