--- a/compose.yaml
+++ b/compose.yaml
@@ -605,6 +605,14 @@ services:
     networks:
       - spark-connect
 
+  timeplus:
+    image: ghcr.io/timeplus-io/proton:latest
+    ports:
+      - 8463:8463
+      - 3218:3218
+    volumes:
+      - timeplus:/var/lib/proton/user_files/ibis
+
 networks:
   impala:
     # docker defaults to naming networks "$PROJECT_$NETWORK" but the Java Hive
@@ -635,3 +643,4 @@ volumes:
   impala:
   risingwave:
   spark-connect:
+  timeplus:
