--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -169,6 +169,7 @@ prompt-toolkit==3.0.48
 propcache==0.2.0
 proto-plus==1.25.0
 protobuf==5.28.3
+proton-driver==0.2.10
 psutil==6.1.0
 psycopg2==2.9.10
 psygnal==0.11.1
